# v1_depth_map

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  run_full_cut.py  run_grid_subsets.py  run_trial_average_fits.py  setup.py  submit_rf_only.py
3d_vision_analysis_2p/: setup.py
3d_vision_analysis_2p/jupyter/: motion-parallax-analysis-model-fitting.ipynb  motion-parallax-analysis-visualisation.ipynb  motion-parallax-model-fitting.ipynb  motion-parallax-model-simulation.ipynb  suite2p-visualisation.ipynb
v1_depth_analysis/: __init__.py  config.py  preprocessing.py  utils.py
v1_depth_analysis/cosyne_poster_2023/: STA_examples.ipynb  close_loop_basic_vis.ipynb  depth_decoder_summary.ipynb  distribution_depth_preference.ipynb  example_spatial_distribution.ipynb  eye_movement_panel.ipynb  open_loop_basic_vis.ipynb  open_loop_summary.ipynb  raster_crossvalidate.ipynb  raster_crossvalidate.py  raster_summary.ipynb
v1_depth_analysis/eye_tracking/: all_sessions.py  analyse_all_sessions.py  analyse_eye.py  analysis.py  example_session.ipynb  eye_tracking_figure.ipynb  preprocess_all_sessions.py  preprocessing.py
v1_depth_analysis/jupyter/: motion-parallax-model-simulation.ipynb  rs_of_correlations.ipynb
v1_depth_analysis/notebooks/: motion-parallax-analysis-visualisation.ipynb  motion-parallax-model-fitting.ipynb  motion-parallax-model-simulation.ipynb  rs_of_correlations.ipynb  suite2p-visualisation.ipynb
v1_depth_analysis/v1_manuscript/: close_loop_basic_vis.ipynb
v1_depth_analysis/v1_manuscript_2023/: calculate_rs_stats_all_sessions.py  close_loop_rsof.py  closed_loop_rsof.py  common_utils.py  depth_decoder.py  depth_selectivity.py  fig_supp_eye_tracking.ipynb  figsupp_openloop.ipynb  figsupp_openloop_separate_recordings.ipynb  figsupp_rf.ipynb  figsupp_rs.ipynb  figsupp_rsof.ipynb  figure1.ipynb  figure1.py  figure2.ipynb  figure3.ipynb  figure4.ipynb  figure_depth_decoder.ipynb  figure_depth_selectivity.ipynb  figure_openloop.ipynb  figure_openloop_supp.ipynb  figure_rf.ipynb  figure_rsof_integration.ipynb  figure_size_control.ipynb  get_session_list.py  make_depth_tuning_raster.ipynb  make_depth_tuning_raster.py  open_loop_rsof.py  rf.py  roi_location.py  run_depth_raster.sh  run_rs_stats.sh  size_control.py  sync_vis_stim_numbers.ipynb  update_flexilims.ipynb
v1_depth_map/: __init__.py  paths.py
v1_depth_map/additional_analysis/: figsupp_openloop_separate_recordings.ipynb  rsof_integration.ipynb  test_openloop_amplitude.ipynb
v1_depth_map/cosyne_poster_2023/: README.md  raster_crossvalidate.py  raster_summary.ipynb  test_scanimage_tiff.ipynb
v1_depth_map/eye_tracking/: analyse_all_sessions.py  analysis.py
v1_depth_map/figure_utils/: closed_loop_rsof.py  common_utils.py  depth_decoder.py  depth_selectivity.py  get_session_list.py  rf.py  roi_location.py  rsof_integration.py  size_control.py  treadmill.py  trial_averages.py  update_flexilims.ipynb  utils.py  von_mises.py
v1_depth_map/figures/: figsupp_eye_tracking.ipynb  figsupp_openloop.ipynb  figsupp_rf.ipynb  figsupp_rs.ipynb  figsupp_rsof.ipynb  figsupp_size_control.ipynb  figsupp_vis_stim_sync.ipynb  figure_depth_selectivity.ipynb  figure_openloop.ipynb  figure_rf.ipynb  figure_rsof_integration.ipynb  figure_size_control.ipynb
v1_depth_map/notebooks/: motion-parallax-analysis-visualisation.ipynb  motion-parallax-model-fitting.ipynb  motion-parallax-model-simulation.ipynb  rs_of_correlations.ipynb  suite2p-visualisation.ipynb
v1_depth_map/precompute_data/: calculate_rs_stats.py  copy_v1_figures_data.py  download_database.py  generate_si_metadata.py  make_depth_tuning_raster.py  run_depth_raster.sh  run_rs_stats.sh
v1_depth_map/presentations/: decode_depth_from_rs_of.ipynb  decoder_20260705_fens.ipynb  decoder_average_l23.ipynb  decoder_example_session.ipynb  decoder_grid_subset_analysis.ipynb  decoder_train_cut_predict_nocut.ipynb  decoder_treadmill_cut.ipynb  dff_skewness_distribution.ipynb  fit_quality_viewer.ipynb  layer_fit_rsquares.ipynb  plot_depth_tuned_proportion_closed_loop.ipynb  plot_depth_tuned_proportion_treadmill.ipynb  plot_ridge_rsquare_across_time.ipynb  plot_ridge_subsets_by_depth.ipynb  plot_ridge_subsets_grids.ipynb  plot_rs_of_cosine_similarity.ipynb  (+5 more)
(+73 files in other folders)
