[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "v1_depth_map"
dynamic = ["version"]
description = "Analysis for V1 depth map project"
license = { text = "MIT" }
authors = [
    { name = "Antonin Blot" },
    { name = "Yiran He", email = "yiran.he@crick.ac.uk" },
    { name = "Petr Znamenskiy" },
]
urls = { Homepage = "https://github.com/znamlab/v1_depth_map" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "pathlib",
    "seaborn",
    "matplotlib",
    "scipy",
    "tables",
    "scikit-learn",
    "tqdm",
    "scikit-image",
    "defopt",
    "roifile",
    "wayla @ git+ssh://git@github.com/znamlab/wayla.git",
    "flexiznam @ git+ssh://git@github.com/znamlab/flexiznam.git@v0.4",
    "znamutils @ git+ssh://git@github.com/znamlab/znamutils.git@v0.9",
    "cottage_analysis @ git+ssh://git@github.com/znamlab/cottage_analysis.git@v2.0",
]

[project.optional-dependencies]
figure = [
    "jupyter",
    "notebook",
    "ipykernel",
    "black",
    "plotly",
    "kaleido",
]


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
# Write version to _version.py so it's importable at runtime
version_file = "v1_depth_map/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
